samples/_failures_safe/1761663351_0f273f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c51619a.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_5c51619a.c:168: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_5c51619a.c:167:13: error: expected declaration or statement at end of input
  167 |             if
      |             ^~
./samples/SAFE/__tmp_5c51619a.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5c51619a.c:167:13: error: expected declaration or statement at end of input
